--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.11.12",
     "@reduxjs/toolkit": "^1.9.3",
-    "next": "13.2.3",
+    "next": "^13.2.4",
     "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
